# verifytapn

./: .gitignore  CMakeLists.txt  rules.mk
src/: CMakeLists.txt  EqualityChecker.h  compile-linux-32-64.sh  compile-mac-32-64.sh
src/Core/: ArgsParser.cpp  VerificationOptions.cpp  VerificationOptions.hpp
src/Core/Query/: ToStringVisitor.cpp  ToStringVisitor.hpp
src/Core/SymbolicMarking/: CMakeLists.txt  DBMMarking.cpp  DBMMarking.hpp  DiscreteInclusionMarkingFactory.hpp  DiscretePartInclusionMarking.cpp  DiscretePartInclusionMarking.hpp  EqualityChecker.h  UppaalDBMMarkingFactory.hpp
src/Core/TAPN/: CMakeLists.txt  InhibitorArc.hpp  TimeInterval.hpp  TimedArcPetriNet.hpp  TimedInputArc.hpp  TimedTransition.cpp  TimedTransition.hpp  TransportArc.hpp
src/DiscreteVerification/: DeadlockVisitor.hpp  DiscreteVerification.cpp  Generator.h  ReducingGenerator.cpp  ReducingGenerator.hpp
src/DiscreteVerification/DataStructures/: PTrie.h  PWList.cpp  PWList.hpp  TimeDartLivenessPWList.cpp  TimeDartPWList.cpp
src/DiscreteVerification/VerificationTypes/: AbstractNaiveVerification.hpp  LivenessSearch.hpp  ReachabilitySearch.cpp  ReachabilitySearch.hpp
src/ReachabilityChecker/: SuccessorGenerator.cpp  SuccessorGenerator.hpp
src/ReachabilityChecker/PassedWaitingList/: CMakeLists.txt
src/ReachabilityChecker/Trace/: CMakeLists.txt  EntrySolver.cpp  EntrySolver.hpp
test/: BatchProcessor.cpp
